--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div id="dino"></div>
       <div id="cactus"></div>
     </div>
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
