--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <main>
     
   </main>
+  <div class="player">
   <iframe width="310" height="230" src="https://www.youtube-nocookie.com/embed/araK9j8mN9Y?autoplay=1" title="YouTube video player" frameborder="0" allow="autoplay;" allowfullscreen></iframe>
+  </div>
   <div class="game">
       <div id="dino"></div>
       <div id="cactus"></div>
